# KerNotes

./: CMakeLists.txt  LICENSE  README.md  main.cpp  mainwindow.cpp  mainwindow.h  settingswindow.cpp  untextedit.cpp  untextedit.h  webconnector.cpp  webconnector.h
Desktop/: CMakeLists.txt  main.md
Desktop/libraries/markdownhighliter/: markdownhighlighter.cpp  ui_qplaintexteditsearchwidget.h
Desktop/libraries/marked/: markdown.css
Desktop/libraries/qjsontreeview/: qjsonmodel.h
Desktop/src/cpp/: JsProvider.cpp  appearancesettings.cpp  main.cpp  mainwindow.cpp  settingswindow.cpp  socketclient.cpp  untextedit.cpp  webconnector.cpp
Desktop/src/headers/: JsProvider.h  appearancesettings.h  mainwindow.h  settingswindow.h  socketclient.h  untextedit.h  webconnector.h
Desktop/src/resources/: index.html  res.qrc
Server/src/: main.js  main.py
libraries/: qjsonmodel.cpp
